--- a/android-sources/AndroidManifest.xml
+++ b/android-sources/AndroidManifest.xml
@@ -83,4 +83,6 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
 
+<!-- %%INSERT_PERMISSIONS -->
+    <!-- %%INSERT_FEATURES -->
 </manifest>
